frontend/test/should_pass/emithere_002.grg
rule emittli()
{
	s:Node;

	iterated it {
		t:Node;
		modify {
			emithere(s);
			emithere(t);
		}
	}

	modify {
		iterated it;
		emithere(s);
	}
}
