frontend/test/should_fail/basic_002.grg
rule r {
  x:Node;
  modify {
    x:Node;
  }
}
